Fixed product preview old branch layout, created share button for settings on mobile

--- a/assets/css/components/clientGallery.css
+++ b/assets/css/components/clientGallery.css
@@ -42,6 +42,7 @@
 }
 
 .preview {
+    width: 603px;
     height: 650px
 }
 
